--- a/index.html
+++ b/index.html
@@ -60,15 +60,33 @@
     </div>
     <hr>
     <hr>
-    <h3>Project name:Pluralsight landing page</h3>
-    <h3>Technology used:html,css,javascript,Reactjs,Bootstrap5</h3>
+    <h3>Project name:marmeto intern project</h3>
+    <h3>Technology used:html,css,javascript</h3>
     <video width="500px" height="300px" controls>
         <source  src="#" type="video/mp4">
     </video>
     <div>Learnings:
         <ul>
             <li>
-                Used the bootstrap 5.to create responsive design.mimic the online learning pluralsight homepage.
+               used javascript fetch api to change the UI according to the user actions
+            </li>
+            <li>
+                design the page according to the figma file.
+            </li>
+        </ul>
+    </div>
+     <h3>Project name:scizers intern project</h3>
+    <h3>Technology used:html,css,javascript,reactjs,bootstrap 5</h3>
+    <video width="500px" height="300px" controls>
+        <source  src="#" type="video/mp4">
+    </video>
+    <div>Learnings:
+        <ul>
+            <li>
+               Used BOOTSTRAP 5 for making the website responsive to all screen sizes
+            </li>
+            <li>
+                build image carousel and used other bootstrap features.
             </li>
         </ul>
     </div>
