--- a/index.html
+++ b/index.html
@@ -62,16 +62,14 @@
     <hr>
     <h3>Project name:marmeto intern project</h3>
     <h3>Technology used:html,css,javascript</h3>
-    <video width="500px" height="300px" controls>
-        <source  src="#" type="video/mp4">
-    </video>
+    <a href="https://main--relaxed-gnome-58b9e5.netlify.app/">project link</a>
     <div>Learnings:
         <ul>
             <li>
                used javascript fetch api to change the UI according to the user actions
             </li>
             <li>
-                design the page according to the figma file.
+                design the page according to the figma file.deploy the project on netify
             </li>
         </ul>
     </div>
