--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
      <h3>Project name:scizers intern project</h3>
     <h3>Technology used:html,css,javascript,reactjs,bootstrap 5</h3>
     <video width="500px" height="300px" controls>
-        <source  src="#" type="video/mp4">
+        <source  src="./scizers.mp4" type="video/mp4">
     </video>
     <div>Learnings:
         <ul>
