--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     <h2>Surya prakash Projects</h2>
     <h3>Project name:JS game</h3>
     <h3>Technology used:html,css,javascript</h3>
-    <video width="500px" height="300px" controls>
-        <source  src="./eggcatch game (1).mp4" type="video/mp4">
-    </video>
+    <a href="https://66a0cf66b8b55f94db65322f--willowy-gumption-f8b1f4.netlify.app/" target="_blank">Project Link</a>
     <div>Learnings:
         <ul>
             <li>Javascript treats the entire webpage as a graph sheet filled with x and y coordinates</li>
@@ -62,7 +60,7 @@
     <hr>
     <h3>Project name:marmeto intern project</h3>
     <h3>Technology used:html,css,javascript</h3>
-    <a href="https://main--relaxed-gnome-58b9e5.netlify.app/">project link</a>
+    <a href="https://main--relaxed-gnome-58b9e5.netlify.app/" target="_blank">Project Link</a>
     <div>Learnings:
         <ul>
             <li>
