--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
     <hr>
     <h3>Project name:Food ordering App</h3>
     <h3>Technology used:html,css,typescript,Mongodb,Angular,Expressjs,Nodejs</h3>
-    <video width="500px" height="300px" controls>
-        <source  src="./digitalrestaurantapp.mp4" type="video/mp4">
-    </video>
+    <a href="https://66a0e50fd54a9c0af2938278--rad-cocada-b29a54.netlify.app/" target="_blank">Project Link</a>
     <div>Learnings:
         <ul>
             <li>Developed during the three months internship in mindtree</li>
@@ -73,9 +71,7 @@
     </div>
      <h3>Project name:scizers intern project</h3>
     <h3>Technology used:html,css,javascript,reactjs,bootstrap 5</h3>
-    <video width="500px" height="300px" controls>
-        <source  src="./scizers.mp4" type="video/mp4">
-    </video>
+    <a href="https://66a0e2fae83d7c097a1b684f--starlit-lolly-89ab9e.netlify.app/" target="_blank">Project Link</a>
     <div>Learnings:
         <ul>
             <li>
